# CorTeX

./: .env  .env.example  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  INSTALL.md  LICENSE  MANUAL.md  README.md  Rocket.toml  SYNC_STATUS.md  config.default.json  cortex.toml.example  crates.js  deny.toml  diesel.toml  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  source-files.js  src-files.js
.githooks/: README.md  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: CI.yml  docs.yml
api/: index.html  openapi.json
cortex/: all.html  index.html  sidebar-items.js
cortex/backend/: constant.DEFAULT_DB_ADDRESS.html  (+27 more)
deploy/: README.md
dispatcher/: all.html  fn.main.html  index.html  sidebar-items.js
docs/: AAA_DESIGN.md  ARCHIVE_RATIONALIZATION.md  DB_TUNING.md  DEPLOYMENT.md  DESIGN_PRINCIPLES.md  DISPATCHER_5B_CODEX_FINDINGS.md  DISPATCHER_5B_PERF_AUDIT.md  DISPATCHER_5B_ROOT_CAUSE.md  DISPATCHER_BENCH.md  DISPATCHER_RATIONALIZATION.md  EXPERIENCE_RATIONALIZATION.md  JOB_MODEL.md  KNOWN_ISSUES.md  LOAD_TESTING.md  LOGGING_RATIONALIZATION.md  OPEN_QUESTIONS.md  ORCHESTRATION_PLAN.md  PERFORMANCE_ROADMAP.md  POSSIBLE_UPGRADES.md  PRODUCTIZING_PLAN.md  PROGRESS_LOG.md  RESOURCE_RATIONALIZATION.md  SANDBOX_CORPORA.md  STRATIFIED_SANDBOXES.md  TEST_DRIVE.md  UI_PUNCHLIST.md  WEBAUTHN_DESIGN.md
examples/: api_doc_spike_okapi.rs  api_doc_spike_utoipa.rs  archive_bench.rs  arxiv_import.rs  arxiv_stats.rs  arxiv_stats.rs.bak  bench_pipeline.rs  bundle_dataset.rs  bundle_dataset.rs.bak  dispatcher.rs  dispatcher.rs.bak  dispatcher_bench.rs  dispatcher_memory.rs  extend_corpora.rs  frontend.rs  hello_worker.rs  omq_interop.rs  record_loading_info.rs  recover_log_reports.rs  register_service.rs  sandbox_arxiv.rs  tex_to_html_import.rs  tex_to_html_worker.rs  zmq_arxiv_workload.rs  zmq_faults.rs  zmq_interop.rs  zmq_payload_libzmq.rs  zmq_payload_zeromq.rs  zmq_resilience.rs  zmq_torture.rs
frontend/: all.html  fn.admin.html  fn.category_service_report.html  fn.category_service_report_all.html  fn.corpus.html  fn.entry_fetch.html  fn.expire_captcha.html  fn.favicon.html  fn.files.html  fn.historical_runs.html  fn.main.html  fn.preview_entry.html  fn.rerun_category.html  fn.rerun_corpus.html  fn.rerun_severity.html  fn.rerun_what.html  fn.robots.html  fn.rocket.html  fn.rocket_route_fn_admin.html  fn.rocket_route_fn_category_service_report.html  fn.rocket_route_fn_category_service_report_all.html  fn.rocket_route_fn_corpus.html  fn.rocket_route_fn_entry_fetch.html  fn.rocket_route_fn_expire_captcha.html  fn.rocket_route_fn_favicon.html  fn.rocket_route_fn_files.html  fn.rocket_route_fn_historical_runs.html  fn.rocket_route_fn_preview_entry.html  fn.rocket_route_fn_rerun_category.html  fn.rocket_route_fn_rerun_corpus.html  fn.rocket_route_fn_rerun_severity.html  fn.rocket_route_fn_rerun_what.html  fn.rocket_route_fn_robots.html  fn.rocket_route_fn_root.html  fn.rocket_route_fn_severity_service_report.html  fn.rocket_route_fn_severity_service_report_all.html  fn.rocket_route_fn_top_service_report.html  fn.rocket_route_fn_what_service_report.html  fn.rocket_route_fn_what_service_report_all.html  fn.rocket_route_fn_worker_report.html  (+31 more)
public/: robots.txt
scripts/: build-docs-site.sh  bundle-dataset-02legacy.sh  bundle-html-dataset-by-severity.sh  bundle-html-dataset.sh  ci_test.sh  deploy.sh  doc-upload.sh  recover_arxiv_history.sh  render_api_spike.py  run_dispatcher.sh  run_worker.sh  screenshot.py  screenshot.sh  verify_migrations.sh
search.index/: 0065c9d3f7.js  009dec1fce.js  01670e26e1.js  019297f356.js  01964caf28.js  01adacd5d9.js  01b28c497c.js  01fd0fd3a8.js  02284b23b8.js  023601b752.js  0257788610.js  02b82f2fc3.js  02fd2694c2.js  02feeb618a.js  0325be8b4d.js  0338f1911d.js  039640bb83.js  03ca9d8944.js  0413d3431f.js  043fb1737f.js  05317914db.js  054baf2636.js  056605913e.js  06857d2abf.js  06b8cffa64.js  0772fd3746.js  07b0205e66.js  084f09335d.js  08b97c4972.js  09daffc2e7.js  0a0df18c19.js  0a1279d0a8.js  0a4cccbdcb.js  0a8aad597a.js  0b57131478.js  0bab8bfc71.js  0be5ee45e9.js  0e0e17855b.js  0e52e9f8d9.js  0e5410b661.js  (+321 more)
src/: backend.rs  bootstrap.rs  client.rs  concerns.rs  config.rs  data.rs  dispatcher.rs  helpers.rs  importer.rs  jobs.rs  lib.rs  manager.rs  migrations.rs  models.rs  observability.rs  receiver.rs  reports.rs  schema.rs  sysinfo.rs  telemetry.rs  worker.rs
templates/: actions-report.html.tera  add-service.html.tera  admin-login.html.tera  admin-runs.html.tera  admin.html.tera  audit.html.tera  breadcrumb.html.tera  category-report.html.tera  corpora-new.html.tera  corpus-dashboard.html.tera  cortex-admin.html.hbs  cortex-overview.html.hbs  cortex-report-category.html.hbs  cortex-report-entry-view.html.hbs  cortex-report-severity.html.hbs  cortex-report-task-list.html.hbs  cortex-report.html.hbs  cortex-rerun.html.hbs  cortex-services.html.hbs  diff-history.html.tera  diff-summary.html.tera  document-report.html.tera  entry-view-report.html.tera  error.html.tera  expire_captcha.html.tera  export-dataset.html.tera  health.html.tera  history.html.tera  job.html.tera  jobs.html.tera  layout-cortex-post.html.hbs  layout-cortex-pre.html.hbs  layout.html.tera  macros.html.tera  overview.html.tera  passkeys.html.tera  report.html.tera  rerun.html.tera  retention.html.tera  runs-diff.html.tera  (+19 more)
tests/: admin_test.rs  audit_test.rs  backend_test.rs  bootstrap_test.rs  client_test.rs  concurrent_dispatch_test.rs  corpora_test.rs  dispatcher_job_limit_test.rs  dispatcher_torture_test.rs  echo_roundtrip_test.rs  export_test.rs  frontend_test.rs  importer_test.rs  jobs_api_test.rs  jobs_test.rs  long_entry_test.rs  management_api_test.rs  metrics_test.rs  migrations_test.rs  pool_test.rs  report_rollup_test.rs  reports_api_test.rs  rerun_test.rs  retention_test.rs  runs_test.rs  services_test.rs  sessions_test.rs  settings_test.rs  tex_to_html_test.rs  webauthn_test.rs
tests_todo/: backend_test.rs  echo_roundtrip_test.rs  importer_test.rs  tex_to_html_test.rs
(+1357 files in other folders)
