[package]
name = "cortex"
version = "0.4.3"
edition = "2021"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
license = "MIT"
repository = "https://github.com/dginev/cortex"
description = """
A general purpose processing framework for corpora of scientific documents
"""

[lib]
name = "cortex"
crate-type = ["rlib","staticlib"]

[[bin]]
name = "frontend"
path = "bin/frontend.rs"

[[bin]]
name = "dispatcher"
path = "bin/dispatcher.rs"

[[bin]]
name = "cortex"
path = "bin/cortex.rs"

[dependencies.libarchive-sys]
git = "https://github.com/dginev/libarchive-sys.git"

[dependencies.pericortex]
git = "https://github.com/dginev/cortex-peripherals.git"
version = "0.2.4"

[dependencies]
regex = "1.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.3"
rand = "0.8.0"
tempfile = "3"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
hyper = "1.10"
percent-encoding = "2.3.2"
zmq = "0.10.0"
dotenvy = "0.15.7"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
chrono = "0.4.45"
# strftime `%Z` for the report-time zone abbreviation (chrono's %Z only yields the numeric offset
# for Local); also `_exit(2)` in the integration-test harnesses (skip C atexit handlers, L-1).
libc = "0.2"
diesel = {version="2.2.10", features = ["postgres", "chrono", "r2d2", "uuid", "serde_json"]}
diesel_migrations = "2.2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
lazy_static = "1.0.0"

# --- API-docs head-to-head spike (Arm 9). Dev-only: the loser is pruned once a framework is chosen.
[dev-dependencies]
utoipa = "4"
rocket_okapi = "0.9"
schemars = "0.8"

# Integration tests that build a Rocket Client over the libpq pool run under a custom harness
# (their own `main` + `process::exit(0)`) to ELIMINATE the L-1 diesel/libpq/Tokio teardown SIGSEGV
# that fires after assertions pass — the racy global teardown is simply never run.
[[test]]
name = "management_api_test"
path = "tests/management_api_test.rs"
harness = false

[[test]]
name = "jobs_api_test"
path = "tests/jobs_api_test.rs"
harness = false

[[test]]
name = "corpora_test"
path = "tests/corpora_test.rs"
harness = false

[[test]]
name = "settings_test"
path = "tests/settings_test.rs"
harness = false

[[test]]
name = "runs_test"
path = "tests/runs_test.rs"
harness = false

[[example]]
name = "api_doc_spike_utoipa"
path = "examples/api_doc_spike_utoipa.rs"

[[example]]
name = "api_doc_spike_okapi"
path = "examples/api_doc_spike_okapi.rs"
