[package]
name = "cortex"
version = "0.4.3"
edition = "2021"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
license = "MIT"
repository = "https://github.com/dginev/cortex"
description = """
A general purpose processing framework for corpora of scientific documents
"""

[lib]
name = "cortex"
crate-type = ["rlib","staticlib"]

[[bin]]
name = "frontend"
path = "bin/frontend.rs"

[[bin]]
name = "dispatcher"
path = "bin/dispatcher.rs"

[[bin]]
name = "cortex"
path = "bin/cortex.rs"

[dependencies.libarchive-sys]
git = "https://github.com/dginev/libarchive-sys.git"

[dependencies.pericortex]
git = "https://github.com/dginev/cortex-peripherals.git"
version = "0.2.4"

[dependencies]
regex = "1.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.3"
rand = "0.8.0"
tempfile = "3"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
hyper = "1.10"
percent-encoding = "2.3.2"
zmq = "0.10.0"
dotenvy = "0.15.7"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
chrono = "0.4.45"
# strftime `%Z` for the report-time zone abbreviation (chrono's %Z only yields the numeric offset
# for Local); also `_exit(2)` in the integration-test harnesses (skip C atexit handlers, L-1).
libc = "0.2"
diesel = {version="2.2.10", features = ["postgres", "chrono", "r2d2", "uuid", "serde_json"]}
diesel_migrations = "2.2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
lazy_static = "1.0.0"
# API-docs auto-generation (Arm 9). rocket_okapi was chosen over utoipa (docs/api-spike/COMPARISON.md
# + OPEN_QUESTIONS #7): its `#[openapi]` reads the real Rocket route, so the OpenAPI spec is generated
# from the single source of truth and can't drift — the symmetry contract extended to the docs.
# `schemars` provides the `JsonSchema` derive for the DTOs. (0.9 is the rocket_okapi release that
# supports Rocket 0.5.1.)
rocket_okapi = { version = "0.9", features = ["rapidoc"] }
schemars = "0.8"
webauthn-rs = "0.5"

# Integration tests that build a Rocket Client over the libpq pool run under a custom harness
# (their own `main` + `process::exit(0)`) to ELIMINATE the L-1 diesel/libpq/Tokio teardown SIGSEGV
# that fires after assertions pass — the racy global teardown is simply never run.
[[test]]
name = "management_api_test"
path = "tests/management_api_test.rs"
harness = false

[[test]]
name = "jobs_api_test"
path = "tests/jobs_api_test.rs"
harness = false

[[test]]
name = "corpora_test"
path = "tests/corpora_test.rs"
harness = false

[[test]]
name = "settings_test"
path = "tests/settings_test.rs"
harness = false

[[test]]
name = "runs_test"
path = "tests/runs_test.rs"
harness = false

[[test]]
name = "admin_test"
path = "tests/admin_test.rs"
harness = false

[[test]]
name = "audit_test"
path = "tests/audit_test.rs"
harness = false

[[test]]
name = "webauthn_test"
path = "tests/webauthn_test.rs"
harness = false

[[test]]
name = "sessions_test"
path = "tests/sessions_test.rs"
harness = false

[[test]]
name = "metrics_test"
path = "tests/metrics_test.rs"
harness = false

[[test]]
name = "retention_test"
path = "tests/retention_test.rs"
harness = false

# The rocket_okapi spike (the chosen framework) — reproduces docs/api-spike/okapi-openapi.json and is
# referenced by docs/api-spike/COMPARISON.md. (The utoipa runner-up was pruned once okapi was chosen.)
[[example]]
name = "api_doc_spike_okapi"
path = "examples/api_doc_spike_okapi.rs"
